<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/ring_mode_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
    <RadioButton
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ring_only_mode"
        android:textSize="20dp"
        android:id="@+id/ring_only_button"
        android:layout_gravity="left"/>
    <RadioButton
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_only_mode"
        android:textSize="20dp"
        android:id="@+id/vibrate_only_button"
        android:layout_gravity="left"/>
    <RadioButton
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/both_mode"
        android:textSize="20dp"
        android:id="@+id/both_button"
        android:layout_gravity="left"/>
    </RadioGroup>
    <Button
        android:id="@+id/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>