<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ring_screen_color">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ring_alarm"
        android:textSize="40dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/ring_text_color"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/current_time"
        android:text="@string/default_current_time_string"
        android:textSize="70dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/ring_text_color"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/snooze_card"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            card_view:cardCornerRadius="6dp"
            card_view:cardBackgroundColor="@color/snooze_dismiss_color"
            card_view:cardElevation="6dp"
            android:layout_margin="20dp"

            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/snooze"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/light_color"
                android:textSize="25dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dismiss_card"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            card_view:cardCornerRadius="6dp"
            card_view:cardBackgroundColor="@color/snooze_dismiss_color"
            card_view:cardElevation="6dp"
            android:layout_margin="20dp"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/dismiss"
                android:textColor="@color/light_color"
                android:textSize="25dp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>

