
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/sleep_mode_background"
    android:clickable="true">
    <View
        android:layout_width="45dp"
        android:layout_height="45dp"/>
    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <View
            android:id="@+id/top_divider"
            app:layout_widthPercent="95%"
            android:layout_height="1dp"/>
    </android.support.percent.PercentRelativeLayout>
            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/default_current_time_string"
                android:textSize="80sp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/light_color"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_set_for"
            android:textSize="30sp"
            android:fontFamily="sans-serif-thin"
            android:layout_gravity="center_vertical"
            android:textColor="@color/light_color"/>
        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/default_current_time_string"
            android:textColor="@color/alarm_time_color"
            android:textSize="30dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_sleep_message"
                    android:textSize="45sp"
                    android:fontFamily="sans-serif-thin"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/light_color"
                    android:id="@+id/go_to_sleep"/>
            </android.support.percent.PercentRelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    <android.support.v7.widget.CardView
        android:layout_centerInParent="true"
        android:id="@+id/wake_up_early_card"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        app:layout_widthPercent="60%"
        app:layout_marginTopPercent="20%"
        app:layout_heightPercent="25%"
        android:gravity="center_horizontal"
        card_view:cardCornerRadius="5dp"
        card_view:cardBackgroundColor="@color/wake_up_early_card_color"
        card_view:cardElevation="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wake_up_early_button"
            android:textSize="20sp"
            android:textColor="@color/light_color"/>
        </android.support.v7.widget.CardView>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
        <android.support.v7.widget.CardView
            android:layout_centerInParent="true"
            android:id="@+id/cancel_sleep_button"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            app:layout_widthPercent="60%"
            app:layout_marginTopPercent="10%"
            android:gravity="center_horizontal"
            app:layout_heightPercent="25%"
            android:layout_below="@id/wake_up_early_card"
            card_view:cardCornerRadius="5dp"
            card_view:cardBackgroundColor="@color/cancel_sleep_card_color"
            card_view:cardElevation="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel_button"
                android:textSize="20sp"
                android:textColor="@color/light_color"/>
        </android.support.v7.widget.CardView>
    </android.support.percent.PercentRelativeLayout>
    </LinearLayout>
</LinearLayout>