<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/snooze_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/setting">
                <ImageView
                    android:id="@+id/snooze_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_hourglass_empty_white_48dp"/>
                <TextView
                    android:layout_toRightOf="@id/snooze_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/light_color"
                    android:text="@string/snooze_setting_title"/>
                <TextView
                    android:id="@+id/snooze_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/default_settings"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/settings_subtitle_color"/>
            </RelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    app:layout_widthPercent="92%"
                    app:layout_marginLeftPercent="4%"
                    app:layout_marginRightPercent="4%"
                    android:layout_height="1dp"
                    android:background="@color/settings_seperator_color"/>
            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/setting"
                android:id="@+id/sleep_setting">
                android:
                <ImageView
                    android:id="@+id/sleep_time_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_schedule_white_48dp"/>
                <TextView
                    android:layout_toRightOf="@id/sleep_time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/light_color"
                    android:text="@string/sleep_time"/>
                <TextView
                    android:id="@+id/fall_asleep_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/default_settings"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/settings_subtitle_color"/>
            </RelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    app:layout_widthPercent="92%"
                    app:layout_marginLeftPercent="4%"
                    app:layout_marginRightPercent="4%"
                    android:layout_height="1dp"
                    android:background="@color/settings_seperator_color"/>
            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/setting"
                android:id="@+id/tone_setting">
                android:
                <ImageView
                    android:id="@+id/alarm_tone_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_music_note_white_48dp"/>
                <TextView
                    android:layout_toRightOf="@id/alarm_tone_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/light_color"
                    android:text="@string/alarm_tone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/settings_subtitle_color"
                    android:id="@+id/tone_indicator"/>
            </RelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    app:layout_widthPercent="92%"
                    app:layout_marginLeftPercent="4%"
                    app:layout_marginRightPercent="4%"
                    android:layout_height="1dp"
                    android:background="@color/settings_seperator_color"/>
            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/ring_mode_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/setting">
                android:
                <ImageView
                    android:id="@+id/ring_mode_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_ring_volume_white_48dp"/>
                <TextView
                    android:layout_toRightOf="@id/ring_mode_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/light_color"
                    android:text="@string/ring_mode_setting"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/settings_subtitle_color"
                    android:id="@+id/ring_mode_indicator"/>
            </RelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    app:layout_widthPercent="92%"
                    app:layout_marginLeftPercent="4%"
                    app:layout_marginRightPercent="4%"
                    android:layout_height="1dp"
                    android:background="@color/settings_seperator_color"/>
            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
        <!--For later implementation
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/help_setting">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/setting">
                android:
                <ImageView
                    android:id="@+id/help_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_help_outline_white_48dp"/>
                <TextView
                    android:layout_toRightOf="@id/help_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textColor="@color/settings_title_color"
                    android:text="@string/help"/>
            </RelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    app:layout_widthPercent="92%"
                    app:layout_marginLeftPercent="4%"
                    app:layout_marginRightPercent="4%"
                    android:layout_height="1dp"
                    android:background="@color/settings_seperator_color"/>
            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
        !-->
    </LinearLayout>
</ScrollView>